--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 
 <div id="container">
     <div id="toolbox">
-        <div class="item d1"></div>
-        <div class="item d2"></div>
-<!--        <div class="item d3"></div>-->
-<!--        <div class="item d4"></div>-->
+        <div class="item d1">
+            1
+        </div>
+        <div class="item d2">
+            2
+        </div>
+        <div class="item d3">
+            3
+        </div>
+        <div class="item d4">
+            4
+        </div>
     </div>
 </div>
 
