--- a/tool_1/blog.html
+++ b/tool_1/blog.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>blog</title>
+    <title>Print</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-hello raha RM
+Ctrl + P => print me !
 </body>
 </html>
